2007-01-17 zunda <zunda at freeshell.org>
	* navi_user.rb: added and modified to use mock-up CGI class to
	avoid error from cgi.rb:980:in `read_multipart': no content
	body (EOFError)

2007-01-18  Kazuhiko  <kazuhiko@fdiary.net>
	* amazon.rb: convert to String first.

2007-01-17 SHIBATA Hiroshi <h-sbt@nifty.com>
	* pb-show.rb:  modified not to escape anchor() because
	number_anchor.rb returns class attribute for a tag. This might
	be a security problem in the future.

2007-01-17 TADA Tadashi <sho@spc.gr.jp>
	* tb-send.rb: support TrackBack spec 1.2 and send by UTF-8 charset.
	* trackback/tb.rb: support TrackBack spec 1.2.
	* ja/{makerss,ping}.rb: use NKF insted of Uconv.
	* zh/{makerss,ping}.rb: use Iconv for convert to UTF-8.

2007-01-16 TADA Tadashi <sho@spc.gr.jp>
	* bq.rb: i18n. {ja,en,zh}/bq.rb added.

2007-01-14 TADA Tadashi <sho@spc.gr.jp>
	* tlink.rb, xmlrpc.rb: modified to use ERB::Util.h instead of CGI::escpaeHTML and escape base-html

2007-01-13 zunda <zunda at freeshell.org>
	* search_form.rb: modified to escape button name, quoated some
	values in HTML tags

2007-01-13 zunda <zunda at freeshell.org>
	* recent_namazu.rb: modified to URL-escape the keywords instead
	of HTML-escape. Sorry, not tested.

2007-01-13 zunda <zunda at freeshell.org>
	* recent_list.rb: modified not to escape anchor() because
	number_anchor.rb returns class attribute for a tag. This might
	be a security problem in the future.

2007-01-11 zunda <zunda at freeshell.org>
	* recent_comment.rb: modified not to escape anchor() because
	number_anchor.rb returns class attribute for a tag. This might
	be a security problem in the future.

2007-01-11 zunda <zunda at freeshell.org>
	* random_google.rb: modified to better escape the query string

2007-01-11 zunda <zunda at freeshell.org>
	* random_google.rb: modified to escape values of input tags in
	configuration interface

2007-01-11 zunda <zunda at freeshell.org>
	* navi_user.rb: modified to check @date before going further.