@@ -1,3 +1,7 @@
+2007-01-18 zunda <zunda at freeshell.org>
+	* category.rb: added a code to recreate category cache files
+	when escape or encoding for cache files has been chnaged
+
 2007-01-17 zunda <zunda at freeshell.org>
 	* navi_user.rb: added and modified to use mock-up CGI class to
 	avoid error from cgi.rb:980:in `read_multipart': no content
